# tideline

./: .gitignore  ARCHITECTURE.md  DESIGN.md  LICENSE  README.md  install.sh  judge_run.sh
core/: pyproject.toml
core/src/tideline/: __init__.py  agent.py  cluster.py  format.py  promotion.py  runtime.py  seed.py  tagging.py
core/src/tideline/bench/: README.md  __init__.py  __main__.py  metrics.py  runner.py
core/src/tideline/bench/agent/: __init__.py  cases.py  metrics.py  runner.py
core/src/tideline/bench/atoms/: __init__.py  a1_word_translation.py  (+13 more)
core/src/tideline/cli/: __main__.py
core/src/tideline/intelligence/: __init__.py  concept_match.py  episodic_title.py  native_gloss.py  relatedness.py  source_language.py  translation_guard.py
core/src/tideline/runtimes/: __init__.py  llama_cpp.py  mock.py
core/src/tideline/tools/: __init__.py  base.py  candidate.py  card.py  memory.py  noop.py  settings.py  theme_review.py  translation.py
core/src/tideline/web/: __init__.py  __main__.py  app.py
core/tests/: test_bench.py  test_bench_agent.py  test_bench_atoms.py  test_cards.py  test_cluster.py  test_episodic_anchoring.py  test_episodic_anchoring_context.py  test_format.py  test_native_gloss.py  test_relatedness.py  test_seed.py  test_settings.py  test_source_language.py  test_step2.py  test_step3.py  test_step4.py  test_step5.py  test_step6b.py  test_step6c.py  test_step6d.py  test_tagging.py  test_theme_review.py  test_translation_guard.py  test_translation_guard_wiring.py  test_walking_skeleton.py  test_web.py
core/tests/fixtures/: gemma_outputs.py
(+79 files in other folders)
